--- a/assets/style.css
+++ b/assets/style.css
@@ -2,14 +2,22 @@
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif; 
 }
-
 body {
+    margin: 5px 30px; 
+}
+
+main {
     padding: 0;
     margin: 30px; 
     display: flex;
     justify-content: center;
     align-items: center; 
     
+}
+
+#header-container {
+   display: flex;
+   justify-content: space-between;
 }
 
 #container {
@@ -48,6 +56,4 @@ body {
 .hide {
     display: none; 
 }
-
-
-
+ 
